# tf-transformers

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.rst  custom_hook.py  index.html  isort.cfg  move_tutorial_to_docs.py  mypy.ini  name: ci-cd.yml  objects.inv  patch_version.py  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build_documentation.yaml  ci_cd.yaml  coverage.yaml  doc_pages.yaml  patch_version.yaml  release.yaml  tests.yaml  tests_pypi.yaml
_sources/Notebooks/: 1_read_write_tfrecords.ipynb.txt
_sources/introduction_docs/: installation.md.txt
_sources/research/: glue.md.txt
_static/: documentation_options.js
benchmarks/: imagenet_clip_benchmark.ipynb
benchmarks/albert/: README.MD  benchmark_hf.py  benchmark_tft.py
benchmarks/gpt2/: README.MD  benchmark_hf.py  benchmark_run.py  benchmark_tft.py
benchmarks/roberta/: README.MD  benchmark_hf.py  benchmark_tft.py
benchmarks/t5/: README.MD  benchmark_hf.py  benchmark_tft.py
benchmarks/vit/: README.MD  benchmark_hf.py  benchmark_tft.py
docs/: requirements.txt  requirements_build.txt
docs/source/: conf.py  index.rst
doctrees/: environment.pickle
doctrees/model_doc/: bart.doctree  clip.doctree  gpt2.doctree  mt5.doctree  vit.doctree  wav2vec2.doctree
html/benchmarks/: vit.html
html/model_doc/: albert.html  mbart.html  t5.html  visual_bert.html  wav2vec2.html
html/research/: glue.html
introduction_docs/: quicktour.html
model_doc/: bart.html  bigbird_tokenizer.html  clip.html  gpt2.html  m2m100.html  parallelism.html  roberta.html
research/GLUE/: README.md  cola.py  long_sequencer_t5_small.ipynb  mnli.py  model.py  mrpc.py  qnli.py  roberta2roberta.ipynb  roberta2roberta_pubmed.ipynb  roberta2roberta_xsum.ipynb  rte.py  run_glue.py  sst2.py  stsb.py  test_glue.ipynb
research/Notebooks/: README.md
research/c4_grammatical_correction/: README.md  dataset_loader.py  model.py  run_c4_grammar_correction.py  train_c4_grammar_correction.py
research/diffusion/: attention.py  base_diffusion.py  beta_schedule.py  check_diffusion.ipynb  check_unet.ipynb  gaussian_diffusion.py  resnet.py  time_embedding_layers.py  unet.py  utils.py
research/experiments/: long_sequencer.ipynb  long_sequencer_t5_small.ipynb  roberta2roberta_pubmed.ipynb  roberta2roberta_xsum.ipynb
research/glue/: README.md  cola.py  mnli.py  model.py  mrpc.py  qnli.py  qqp.py  rte.py  run_glue.py  run_mnli_mismatched.py  score_glue.py  sst2.py  stsb.py  test_glue.ipynb
research/long_block_sequencer/: README.md  callbacks.py  dataset_loader.py  evaluate.py  long_block_encoder.py  model.py  prepare_tfrecords.py  run_long_block_sequencer.py  train_long_block_sequencer.py
research/masked_language_model/: README.MD  callbacks.py  dataset_loader.py  model.py  prepare_data.py  run_mlm.py  test_document.txt  train_mlm.py
research/masked_language_model_old/: 1_data_prepration.ipynb  2_text_to_features.py  prepare_data.py  train_mlm.py
research/mix_language_model/: README.MD  dataset_loader.py  dataset_loader_with_sentence_split.py  mix_lm_model.py  model.py  run_mix_lm.py  train_mix_lm.py
research/mix_language_model_old/: 1_data_prepration.ipynb  README.MD  eval_mix_lm.py  train_mix_lm.py
research/sentence2vec/: dataset_loader.py  model.py  sentence2vec_albert.py  similarity_model.py  train.py
research/sentence_language_model/: README.md  callbacks.py  dataset_loader.py  model.py  run_mlm.py  train_mlm.py
research/similarity_model_pretraining/: README.MD  callbacks.py  dataset_loader.py  model.py  run_similarity.py  similarity_model.py  train_similairity.py
research/t5_style_pretraining/: README.md  dataset_loader.py  model.py  run_t5_modified.py  t5_modified.py  t5_tokenizer_modified.py  train_t5_modified.py
source/: conf.py  index.rst
source/benchmarks/: albert.md  vit.md
source/introduction_docs/: installation.md
source/model_doc/: bert.rst  clip_feature_extractor.rst
source/model_usage/: sentence_transformers.ipynb  text_generation_using_t5.ipynb
source/tutorials/: sample.ipynb  (+4 more)
tests/: test_modeling_albert.py  test_modeling_gpt2.py  test_modeling_mt5.py  test_modeling_roberta.py  test_modeling_t5.py  test_modeling_vit.py  test_tf_transformers.py  test_wav2vec2.py
tutorials/: 1_read_write_tfrecords.ipynb  1_read_write_tfrecords.md  3_masked_lm_tpu.ipynb  3_masked_lm_tpu.md  4_image_classification_vit_multi_gpu.md  6_prompt_engineering_clip.md  7_gpt2_question_answering_squad.ipynb  7_gpt2_question_answering_squad.md  8_code_code_java_to_csharp_t5.md  9_images_tfrecords.ipynb  9_images_tfrecords.md  README.ipynb  README.md  push_model_to_hf_hub.ipynb  push_model_to_hf_hub.md
(+453 files in other folders)
